# cleverinterview-photo_service

backend/: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  photos.csv  pyproject.toml  seed_db.py
backend/api/: auth.py  urls.py  views.py
backend/backend/: settings.py
backend/photos/: admin.py  apps.py  db.py  models.py  serializers.py  signals.py  validators.py
backend/photos/management/commands/: ensure_superuser.py
backend/photos/migrations/: 0001_initial.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: TextContentContext.tsx  TopNavBar.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/@modal/: default.tsx
frontend/src/app/@modal/jobs/[id]/: page.tsx
frontend/src/app/@modal/newJob/[id]/: page.tsx
frontend/src/app/@modal/newJob/error/: page.tsx
frontend/src/app/@modal/newJob/submitted/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/auth/: Provider.tsx  index.ts
frontend/src/app/components/: PrimaryText.tsx  SearchAndFilterBar.tsx  TableSkeleton.tsx
frontend/src/app/constants/: index.ts
frontend/src/app/data/: TextContent.json
frontend/src/app/fragments/: index.tsx
frontend/src/app/jobs/: JobsList.tsx  page.tsx
frontend/src/app/loginRequired/: page.tsx
frontend/src/app/newJob/: JobTypesList.tsx  NewJobForm.tsx  page.tsx
frontend/src/app/types/: index.ts
frontend/src/app/utils/: QueryProvider.tsx  SafeHTML.tsx  index.tsx
